резолв конфликтов и варнингов